Fix paragraph spacing

--- a/src/js/components/encounter/display-components/FreeText.scss
+++ b/src/js/components/encounter/display-components/FreeText.scss
@@ -1,4 +1,10 @@
 .freeText {
     width: 100%;
     padding: 0.5em 3em;
+
+    p {
+        margin: 0.5em 0;
+        text-indent: 0.9em;
+        text-align: justify;
+    }
 }
